--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: "Asia/Shanghai"
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://asterich.github.io/asterich_blog/
-permalink: /:year/:month/:day/:title
+permalink: /:year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -68,8 +68,8 @@ index_generator:
 # Category & Tag
 default_category: uncategorized
 category_map:
-  - 杂谈: essay
-  - 编程: programming
+  杂谈: essay
+  编程: programming
 tag_map:
 
 # Metadata elements
