--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hexo-server": "^3.0.0",
     "hexo-tag-img": "^1.0.2",
     "hexo-tag-plugins": "^1.0.5",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "hexo-theme-next": "^8.19.1"
   }
 }
