--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-tag": "^2.0.0",
     "hexo-math": "^4.0.0",
+    "hexo-next-valine": "github:next-theme/hexo-next-valine",
     "hexo-related-popular-posts": "^5.0.1",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-pandoc": "^0.3.1",
